@@ -11,22 +11,32 @@ struct Light {
     Uint8 r;
     Uint8 g;
     Uint8 b;
+    Uint8 skyIntensity;
 
     /* Sets this light equal to the sum of two other lights. */
-    void sum(Light one, Light two) {
+    void sum(const Light &one, const Light &two) {
         // Take the max of each component.
         r = max(one.r, two.r);
         g = max(one.g, two.g);
         b = max(one.b, two.b);
     }
 
+    /* Sum the light provided and the light from the sky (which has the 
+    skyIntensity of the light provided and the color of the skyColor). */
+    void useSky(const Light &light, const Light &skyColor) {
+        Light skyLight = skyColor;
+        skyLight.setIntensity(light.skyIntensity);
+        sum(light, skyLight);
+    }
+
     /* Sets a new intensity and multiplies each value of rgb by it. Should only
     be used just after r, g, and b have been set to their max for the given
     light color. */
-    void setIntensity(double intensity) {
-        r *= intensity;
-        g *= intensity;
-        b *= intensity;
+    void setIntensity(Uint8 intensity) {
+        skyIntensity = intensity;
+        r = r * intensity / 255;
+        g = g * intensity / 255;
+        b = b * intensity / 255;
     }
 };
 
