@@ -8,12 +8,12 @@ NOISE_FLAGS = -I/usr/include/libnoise -L/usr/lib -lnoise
 all : main
 
 main : main.o Map.o World.o Tile.o WindowHandler.o EventHandler.o Movable.o \
-        Player.o Collider.o Hotbar.o
+        Player.o Collider.o Hotbar.o Entity.o
 	$(CC) $(CXXFLAGS) $(LINKER_FLAGS) $^ -o $@ $(LDFLAGS) $(NOISE_FLAGS)
 
 main.o : main.cc World.hh Tile.hh Map.hh WindowHandler.hh EventHandler.hh \
         Collider.hh Hotbar.hh Movable.hh Player.hh Light.hh MapHelpers.hh \
-        Point.hh Sprite.hh UIHelpers.hh
+        Point.hh Sprite.hh UIHelpers.hh Entity.hh
 	$(CC) $(CXXFLAGS) $(LINKER_FLAGS) $^ -c $(LDFLAGS)
 
 Map.o : Map.cc Map.hh Tile.hh MapHelpers.hh Light.hh
@@ -27,13 +27,14 @@ WindowHandler.o : WindowHandler.cc WindowHandler.hh Tile.hh Map.hh Movable.hh \
 	$(CC) $(CXXFLAGS) $(LINKER_FLAGS) $^ -c $(LDFLAGS)
 
 EventHandler.o : EventHandler.cc EventHandler.hh WindowHandler.hh Player.hh \
-        Movable.hh Point.hh Hotbar.hh UIHelpers.hh
+        Movable.hh Point.hh Hotbar.hh UIHelpers.hh Entity.hh
 	$(CC) $(CXXFLAGS) $(LINKER_FLAGS) $^ -c $(LDFLAGS)
 
 Movable.o : Movable.cc Movable.hh Point.hh
 	$(CC) $(CXXFLAGS) $(LINKER_FLAGS) $^ -c $(LDFLAGS)
 
-Player.o : Player.cc Player.hh Movable.hh Point.hh Hotbar.hh
+Player.o : Player.cc Player.hh Movable.hh Point.hh Hotbar.hh UIHelpers.hh \
+        Light.hh Entity.hh
 	$(CC) $(CXXFLAGS) $(LINKER_FLAGS) $^ -c $(LDFLAGS)
 
 Collider.o : Collider.cc Collider.hh Tile.hh Map.hh Movable.hh Point.hh \
@@ -44,6 +45,9 @@ World.o : World.cc World.hh Tile.hh MapHelpers.hh Sprite.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS) $(NOISE_FLAGS)
 
 Hotbar.o : Hotbar.cc Hotbar.hh Sprite.hh UIHelpers.hh
+	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
+
+Entity.o : Entity.cc Entity.hh Movable.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
 
 clean :
